# 2025-SEAME

./: Makefile  README.md  auto_drive  constants.json  lighton.py  makefile
include/: constants.hpp  contants.hpp  control.hpp  lane_detector.hpp  object_detector.hpp  usb_cam.hpp  video_recorder.hpp
piracer-cpp/: CMakeLists.txt
piracer-cpp/Adafruit_INA219/: Adafruit_INA219.cpp  Adafruit_INA219.hpp
piracer-cpp/Adafruit_PCA9685/: Adafruit_PCA9685.cpp
piracer-cpp/PiRacer/: PiRacer.hpp
piracer-cpp/examples/: forward_backward_left_right.cpp  gamepad_control.cpp  read_battery.cpp
src/: constants.cpp  control.cpp  lane_detector.cpp  main.cpp  object_detector.cpp  usb_cam.cpp  video_recorder.cpp
